[package]
name = "rust"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib"]

[dependencies]
anyhow = "1.0.68"
axum = { version = "0.6.1", features = ["ws"] }
bitflags = "1.3.2"
http = "0.2.8"
http-body = "0.4.5"
hyper = { version = "0.14.23", features = ["full"] }
hyperlocal-with-windows = { version = "0.8.2", features = ["server"], default-features = false }
libc = "0.2"
once_cell = "1.17.0"
regex = "1.7.0"
rusqlite = { version = "0.28.0", features = ["bundled"] }
serde = { version = "1.0.152", features = ["derive"] } 
serde_json = "1.0.91"
tokio = { version = "1.23.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.3.5", features = ["trace", "validate-request"] }
tower-service = "0.3.2"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["default", "env-filter"] }

[build-dependencies]
bindgen = "0.63.0"
pkg-config = "0.3.26"
